--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GitHub Users</string>
+    <string name="repeat">Repeat</string>
+    <string name="users_loading_error_message">Can\'t update the list. Check your internet connection.</string>
 </resources>
