[ADDED] splash screen [CHANGED] UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="repeat">Repeat</string>
     <string name="users_loading_error_message">Can\'t update the list. Check your internet connection.</string>
 
-    // User Info screen
+    <!-- User Info screen -->
     <string name="user_info">User Info</string>
     <string name="nickname_field">Nickname:</string>
     <string name="webpage_field">Webpage:</string>
