--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">GitHub Users</string>
     <string name="repeat">Repeat</string>
-    <string name="users_loading_error_message">Can\'t update the list. Check your internet connection.</string>
+    <string name="loading_error_message">Loading error. Check your internet connection.</string>
 
     <!-- User Info screen -->
     <string name="user_info">User Info</string>
